projects/compiler/test/parser/functiondecl_error_empty_typeparams.out
Error at %FILE_NAME%:1:10
Unexpected token '>', expected 'identifier':
  |  func foo<>() {}
              ^